partially complete calculator function

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section id="main-container">
             <button id="all-clear-key">AC</button>
             <button id="clear-key">C</button>
-            <button class="operator-keys" value="add">+</button>
+            <button class="operator-keys" value="add">&plus;</button>
             <button class="operator-keys" value="subtract">&minus;</button>
             <button class="operator-keys" value="multiply">&times;</button>
             <button class="operator-keys" value="divide">&divide;</button>
