--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -11,7 +12,7 @@
 
     <main>
         <form id="form-box" action="">
-            <input id="input-box" type="text">
+            <input id="input-box" type="text" placeholder="enter number" readonly>
         </form>
         <section id="main-container">
             <button id="all-clear-key">AC</button>
