--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <main>
         <form id="form-box" action="">
+            <span>test</span>
             <input id="input-box" type="text" placeholder="enter number" readonly>
         </form>
         <section id="main-container">
