--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <script src="main.js" defer></script>
+    <title>Calculator</title>
 </head>
 <body>
     <h1>calculator</h1>
@@ -37,5 +38,4 @@
         </section>
     </main>
 </body>
-<script src="main.js"></script>
 </html>
